Adcionando fluxo de caixa

--- a/teste_2.ipynb
+++ b/teste_2.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.by import By\n",
     "from selenium.webdriver.support.ui import Select\n",
-    "from selenium.common.exceptions import StaleElementReferenceException\n",
+    "from selenium.common.exceptions import StaleElementReferenceException, UnexpectedAlertPresentException  \n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "from selenium.webdriver.chrome.service import Service\n",
     "from selenium.webdriver.chrome.options import Options\n",
@@ -17,7 +17,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "class DREDataScraper:\n",
+    "class FluxoCaixaDataScraper:\n",
     "    def __init__(self, setor_financeiro, options, service,acoes,diretorio=None):\n",
     "        self.setor_financeiro = setor_financeiro\n",
     "        self.options = options\n",
@@ -33,7 +33,7 @@
     "    def obter_datas(self, navegador):\n",
     "        while True:\n",
     "            try:\n",
-    "                elementos_data = navegador.find_elements(By.XPATH, '//*[@id=\"tabela_resumo_empresa_dre_3meses\"]/thead/tr/th[2]/select/option')\n",
+    "                elementos_data = navegador.find_elements(By.XPATH, '//*[@id=\"tabela_resumo_empresa_fc_3meses\"]/thead/tr/th[2]/select')\n",
     "                datas = [elemento.text for elemento in elementos_data]\n",
     "                if len(datas) == 1:\n",
     "                    string_de_datas = datas[0]\n",
@@ -45,11 +45,11 @@
     "    def obter_dados_tabela(self, navegador, data):\n",
     "        while True:\n",
     "            try:\n",
-    "                select_element = navegador.find_element(By.XPATH, '/html/body/div[1]/div[4]/div[2]/div[1]/div[3]/table[2]/thead/tr/th[2]/select')\n",
+    "                select_element = navegador.find_element(By.XPATH, '//*[@id=\"tabela_resumo_empresa_fc_3meses\"]/thead/tr/th[2]/select')\n",
     "                select = Select(select_element)\n",
     "                select.select_by_visible_text(data)\n",
     "\n",
-    "                tabela = navegador.find_element(By.ID, 'tabela_resumo_empresa_dre_3meses')\n",
+    "                tabela = navegador.find_element(By.ID, 'tabela_resumo_empresa_fc_3meses')\n",
     "                linhas = tabela.find_elements(By.TAG_NAME, 'tr')\n",
     "\n",
     "                lista_resumo_balanco = []\n",
@@ -65,22 +65,21 @@
     "    def coletar_dados_financeiros(self, navegador, datas):\n",
     "        dados = {\n",
     "            'datas': datas,\n",
-    "            'receita_liquida': [],\n",
-    "            'resultado_bruto': [],\n",
-    "            'ebit': [np.nan] * len(datas),\n",
-    "            'depreciacao_amortizacao': [np.nan] * len(datas),\n",
-    "            'ebitda': [np.nan] * len(datas),\n",
-    "            'lucro_liquido': [],\n",
-    "            'lucro_por_acao': [np.nan] * len(datas)\n",
+    "            'fluxo_caixa_operacional': [],\n",
+    "            'fluxo_caixa_investimentos': [],\n",
+    "            'fluxo_caixa_financiamento': [],\n",
+    "            'aumento_reducao_caixa_equivalentes': [],\n",
+    "    \n",
     "        }\n",
     "        for data in datas:\n",
     "            while True:\n",
     "                lista_resumo_balanco = self.obter_dados_tabela(navegador=navegador, data=data)\n",
     "                if lista_resumo_balanco:\n",
     "                    break\n",
-    "            dados['receita_liquida'].append(lista_resumo_balanco[1].replace('R$','').replace(',','.').strip())\n",
-    "            dados['resultado_bruto'].append(lista_resumo_balanco[3].replace('R$','').replace(',','.').strip())\n",
-    "            dados['lucro_liquido'].append(lista_resumo_balanco[7].replace('R$','').replace(',','.').strip())\n",
+    "            dados['fluxo_caixa_operacional'].append(lista_resumo_balanco[1].replace('R$','').replace(',','.').strip())\n",
+    "            dados['fluxo_caixa_investimentos'].append(lista_resumo_balanco[3].replace('R$','').replace(',','.').strip())\n",
+    "            dados['fluxo_caixa_financiamento'].append(lista_resumo_balanco[7].replace('R$','').replace(',','.').strip())\n",
+    "            dados['aumento_reducao_caixa_equivalentes'].append(lista_resumo_balanco[7].replace('R$','').replace(',','.').strip())\n",
     "            \n",
     "        df_resumo_balanco = pd.DataFrame(dados)\n",
     "        \n",
@@ -89,13 +88,10 @@
     "    def coletar_dados_nao_financeiros(self,navegador, datas):\n",
     "        dados = {\n",
     "            'datas': datas,\n",
-    "            'receita_liquida': [],\n",
-    "            'resultado_bruto': [],\n",
-    "            'ebit': [],\n",
-    "            'depreciacao_amortizacao': [],\n",
-    "            'ebitda': [],\n",
-    "            'lucro_liquido': [],\n",
-    "            'lucro_por_acao': []\n",
+    "            'fluxo_caixa_operacional': [],\n",
+    "            'fluxo_caixa_investimentos': [],\n",
+    "            'fluxo_caixa_financiamento': [],\n",
+    "            'aumento_reducao_caixa_equivalentes': [],\n",
     "        }\n",
     "\n",
     "        for data in datas:\n",
@@ -103,13 +99,10 @@
     "                lista_resumo_balanco = self.obter_dados_tabela(navegador=navegador, data=data)\n",
     "                if lista_resumo_balanco:\n",
     "                    break\n",
-    "            dados['receita_liquida'].append(lista_resumo_balanco[1].replace('R$','').replace(',','.').strip())\n",
-    "            dados['resultado_bruto'].append(lista_resumo_balanco[3].replace('R$','').replace(',','.').strip())\n",
-    "            dados['ebit'].append(lista_resumo_balanco[5].replace('R$','').replace(',','.').strip())\n",
-    "            dados['depreciacao_amortizacao'].append(lista_resumo_balanco[7].replace('R$','').replace(',','.').strip())\n",
-    "            dados['ebitda'].append(lista_resumo_balanco[9].replace('R$','').replace(',','.').strip())\n",
-    "            dados['lucro_liquido'].append(lista_resumo_balanco[11].replace('R$','').replace(',','.').strip())\n",
-    "            dados['lucro_por_acao'].append(lista_resumo_balanco[13].replace('R$','').replace(',','.').strip())\n",
+    "            dados['fluxo_caixa_operacional'].append(lista_resumo_balanco[1].replace('R$','').replace(',','.').strip())\n",
+    "            dados['fluxo_caixa_investimentos'].append(lista_resumo_balanco[3].replace('R$','').replace(',','.').strip())\n",
+    "            dados['fluxo_caixa_financiamento'].append(lista_resumo_balanco[7].replace('R$','').replace(',','.').strip())\n",
+    "            dados['aumento_reducao_caixa_equivalentes'].append(lista_resumo_balanco[7].replace('R$','').replace(',','.').strip())\n",
     "            \n",
     "        df_resumo_balanco = pd.DataFrame(dados)\n",
     "            \n",
@@ -120,6 +113,7 @@
     "        lista_dataframes = []\n",
     "        acoes_processadas = set()\n",
     "        for acao in self.acoes:\n",
+    "            \n",
     "            navegador = self.navegador_get(acao=acao)\n",
     "            \n",
     "            elemento_text = navegador.find_elements(By.XPATH, '/html/body/div[1]/div[4]/div[2]') \n",
@@ -136,23 +130,16 @@
     "                datas = self.obter_datas(navegador=navegador)\n",
     "\n",
     "                if acao in self.setor_financeiro:\n",
-    "                    df_dre = self.coletar_dados_financeiros(navegador=navegador, datas=datas)  \n",
-    "                    colunas_selecionadas = df_dre.columns[(df_dre.columns != 'datas') & \n",
-    "                                    (df_dre.columns != 'lucro_por_acao') &\n",
-    "                                    (df_dre.columns != 'ebit') &   \n",
-    "                                    (df_dre.columns != 'depreciacao_amortizacao') & \n",
-    "                                    (df_dre.columns != 'lucro_por_acao') &\n",
-    "                                    (df_dre.columns != 'ebitida') &  \n",
-    "                                    (df_dre.columns != 'lucro_por_acao')]\n",
-    "                    for col in colunas_selecionadas:\n",
-    "                        df_dre[col] = df_dre[col].apply(self.converter_valor)\n",
+    "                    df_dados = self.coletar_dados_financeiros(navegador=navegador, datas=datas)  \n",
+    "                    for col in df_dados.columns[(df_dados.columns != 'datas')]:\n",
+    "                        df_dados[col] = df_dados[col].apply(self.converter_valor)\n",
     "                else:\n",
-    "                    df_dre = self.coletar_dados_nao_financeiros(navegador=navegador, datas=datas) \n",
-    "                    for col in df_dre.columns[(df_dre.columns != 'datas') & (df_dre.columns != 'lucro_por_acao') & (df_dre.columns != 'tic')]:\n",
-    "                        df_dre[col] = df_dre[col].apply(self.converter_valor)\n",
+    "                    df_dados = self.coletar_dados_nao_financeiros(navegador=navegador, datas=datas) \n",
+    "                    for col in df_dados.columns[(df_dados.columns != 'datas')]:\n",
+    "                        df_dados[col] = df_dados[col].apply(self.converter_valor)\n",
     "                    \n",
-    "                df_dre['tic'] = acao\n",
-    "                lista_dataframes.append(df_dre)\n",
+    "                df_dados['tic'] = acao\n",
+    "                lista_dataframes.append(df_dados)\n",
     "\n",
     "                iteracao += 1\n",
     "                \n",
@@ -176,7 +163,7 @@
     "\n",
     "    def salvar_dados(self,lista_dataframes):\n",
     "        if self.diretorio is None:\n",
-    "            self.diretorio = 'dados/dre.csv'\n",
+    "            self.diretorio = 'dados/fluxo_caixa.csv'\n",
     "        pd.concat(lista_dataframes).to_csv(self.diretorio)\n",
     "\n",
     "    def converter_valor(self,valor):\n",
@@ -197,32 +184,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from selenium.common.exceptions import UnexpectedAlertPresentException, NoSuchElementException\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo de execução da ação ABEV3: 0.80 minutos\n",
-      "Tempo de execução da ação AZUL4: 0.42 minutos\n",
-      "Tempo de execução da ação B3SA3: 1.03 minutos\n",
-      "Tempo de execução da ação BBAS3: 1.18 minutos\n",
-      "Tempo de execução da ação BBDC3: 1.14 minutos\n",
-      "Tempo de execução da ação BBDC4: 1.18 minutos\n",
-      "Tempo de execução da ação BBSE3: 0.50 minutos\n",
-      "Tempo de execução da ação BEEF3: 0.92 minutos\n",
-      "Tempo de execução da ação BPAC11: 0.62 minutos\n",
-      "Tempo de execução da ação BRAP4: 2.82 minutos\n"
+      "Tempo de execução da ação ABEV3: 0.57 minutos\n",
+      "Tempo de execução da ação AZUL4: 0.37 minutos\n",
+      "Tempo de execução da ação B3SA3: 0.67 minutos\n"
      ]
     }
    ],
@@ -243,7 +214,7 @@
     "options.add_argument(\"--disable-gpu\")  # Desativar o uso de GPU\n",
     "options.add_argument(\"--window-size=1920,1080\")  # Definir o tamanho da janela\n",
     "\n",
-    "scraper = DREDataScraper(setor_financeiro, options, service,acoes=codigos_ibovespa)\n",
+    "scraper = FluxoCaixaDataScraper(setor_financeiro, options, service,acoes=codigos_ibovespa)\n",
     "\n",
     "dados = scraper.rodar_acoes()\n"
    ]
