--- a/Notebooks/fluxo_caixa_experimental.ipynb
+++ b/Notebooks/fluxo_caixa_experimental.ipynb
@@ -23,7 +23,7 @@
     "from datetime import datetime\n",
     "\n",
     "#!pip install investpy\n",
-    "import investpy as inv\n",
+    "#import investpy as inv\n",
     "from time import sleep\n",
     "import time"
    ]
@@ -726,7 +726,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
