--- a/codigos_rodando/teste_balanco.ipynb
+++ b/codigos_rodando/teste_balanco.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'DreDataScraper' from 'FundamentsStockBrazil.IncomeStatement' (/workspaces/fundamentalist-stock-brazil/codigos_rodando/../FundamentsStockBrazil/IncomeStatement.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msys\u001b[39;00m\n\u001b[1;32m      2\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m..\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mFundamentsStockBrazil\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mIncomeStatement\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DreDataScraper\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mselenium\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwebdriver\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mchrome\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mservice\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Service\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mselenium\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwebdriver\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mchrome\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01moptions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Options\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'DreDataScraper' from 'FundamentsStockBrazil.IncomeStatement' (/workspaces/fundamentalist-stock-brazil/codigos_rodando/../FundamentsStockBrazil/IncomeStatement.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tempo de execução da ação ABEV3: 0.96 minutos\n",
+      "Ação ABEV3 já processada, pulando.\n",
+      "Tempo de execução da ação AZUL4: 0.66 minutos\n",
+      "Tempo de execução da ação ITUB4: 1.65 minutos\n",
+      "Código de negociação bbbbbb não encontrado.\n"
      ]
     }
    ],
