--- a/codigos_rodando/teste_balanco.ipynb
+++ b/codigos_rodando/teste_balanco.ipynb
@@ -2,25 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tempo de execução da ação ABEV3: 0.96 minutos\n",
-      "Ação ABEV3 já processada, pulando.\n",
-      "Tempo de execução da ação AZUL4: 0.66 minutos\n",
-      "Tempo de execução da ação ITUB4: 1.65 minutos\n",
-      "Código de negociação bbbbbb não encontrado.\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'FluxoCaixaDataScraper' from 'FundamentsStockBrazil.CashFlow' (/workspaces/fundamentalist-stock-brazil/codigos_rodando/../FundamentsStockBrazil/CashFlow.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01msys\u001b[39;00m\n\u001b[1;32m      2\u001b[0m sys\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mappend(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m..\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mFundamentsStockBrazil\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mCashFlow\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m FluxoCaixaDataScraper\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mselenium\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwebdriver\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mchrome\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mservice\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Service\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mselenium\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mwebdriver\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mchrome\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01moptions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m Options\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'FluxoCaixaDataScraper' from 'FundamentsStockBrazil.CashFlow' (/workspaces/fundamentalist-stock-brazil/codigos_rodando/../FundamentsStockBrazil/CashFlow.py)"
      ]
     }
    ],
    "source": [
     "import sys\n",
     "sys.path.append('..')\n",
-    "from FundamentsStockBrazil.IncomeStatement import DreDataScraper\n",
+    "from FundamentsStockBrazil.CashFlow import FluxoCaixaDataScraper\n",
     "from selenium.webdriver.chrome.service import Service\n",
     "from selenium.webdriver.chrome.options import Options\n",
     "\n",
@@ -42,11 +42,11 @@
     "options.add_argument(\"--disable-gpu\")  # Desativar o uso de GPU\n",
     "options.add_argument(\"--window-size=1920,1080\")  # Definir o tamanho da janela\n",
     "\n",
-    "scraper = DreDataScraper(setor_financeiro, options, service, acoes=codigos_ibovespa, diretorio='../dados/dre.csv')\n",
+    "scraper = FluxoCaixaDataScraper(setor_financeiro, options, service, acoes=codigos_ibovespa, diretorio='../dados/fluxo_caixa.csv')\n",
     "\n",
     "dados = scraper.rodar_acoes()\n",
     "\n",
-    "dados.to_csv('../dados/dre.csv')"
+    "dados.to_csv('../dados/fluxo_caixa.csv')"
    ]
   },
   {
