--- a/teste_2.ipynb
+++ b/teste_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,16 +184,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo de execução da ação ABEV3: 0.57 minutos\n",
-      "Tempo de execução da ação AZUL4: 0.37 minutos\n",
-      "Tempo de execução da ação B3SA3: 0.67 minutos\n"
+      "Tempo de execução da ação ABEV3: 0.45 minutos\n",
+      "Tempo de execução da ação AZUL4: 0.28 minutos\n",
+      "Tempo de execução da ação B3SA3: 0.53 minutos\n",
+      "Tempo de execução da ação BBAS3: 0.52 minutos\n",
+      "Tempo de execução da ação BBDC3: 0.50 minutos\n",
+      "Tempo de execução da ação BBDC4: 0.51 minutos\n",
+      "Tempo de execução da ação BBSE3: 0.43 minutos\n",
+      "Tempo de execução da ação BEEF3: 0.49 minutos\n",
+      "Tempo de execução da ação BPAC11: 0.49 minutos\n",
+      "Tempo de execução da ação BRAP4: 0.48 minutos\n"
      ]
     }
    ],
