--- a/codigos_rodando/teste_balanco.ipynb
+++ b/codigos_rodando/teste_balanco.ipynb
@@ -11,7 +11,9 @@
      "text": [
       "Tempo de execução da ação ABEV3: 0.81 minutos\n",
       "Ação ABEV3 já processada, pulando.\n",
-      "Tempo de execução da ação AZUL4: 0.53 minutos\n"
+      "Tempo de execução da ação AZUL4: 0.53 minutos\n",
+      "Tempo de execução da ação ITUB4: 0.97 minutos\n",
+      "Código de negociação bbbbbb não encontrado.\n"
      ]
     }
    ],
