--- a/teste_2.ipynb
+++ b/teste_2.ipynb
@@ -17,7 +17,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "class FluxoCaixaDataScraper:\n",
+    "class CapexDataScraper:\n",
     "    def __init__(self, setor_financeiro, options, service,acoes,diretorio=None):\n",
     "        self.setor_financeiro = setor_financeiro\n",
     "        self.options = options\n",
@@ -33,7 +33,7 @@
     "    def obter_datas(self, navegador):\n",
     "        while True:\n",
     "            try:\n",
-    "                elementos_data = navegador.find_elements(By.XPATH, '//*[@id=\"tabela_resumo_empresa_fc_3meses\"]/thead/tr/th[2]/select')\n",
+    "                elementos_data = navegador.find_elements(By.XPATH, '//*[@id=\"tabela_resumo_empresa_experimental\"]/thead/tr/th[2]/select')\n",
     "                datas = [elemento.text for elemento in elementos_data]\n",
     "                if len(datas) == 1:\n",
     "                    string_de_datas = datas[0]\n",
@@ -45,11 +45,11 @@
     "    def obter_dados_tabela(self, navegador, data):\n",
     "        while True:\n",
     "            try:\n",
-    "                select_element = navegador.find_element(By.XPATH, '//*[@id=\"tabela_resumo_empresa_fc_3meses\"]/thead/tr/th[2]/select')\n",
+    "                select_element = navegador.find_element(By.XPATH, '//*[@id=\"tabela_resumo_empresa_experimental\"]/thead/tr/th[2]/select')\n",
     "                select = Select(select_element)\n",
     "                select.select_by_visible_text(data)\n",
     "\n",
-    "                tabela = navegador.find_element(By.ID, 'tabela_resumo_empresa_fc_3meses')\n",
+    "                tabela = navegador.find_element(By.ID, 'pagina_empresa_experimental')\n",
     "                linhas = tabela.find_elements(By.TAG_NAME, 'tr')\n",
     "\n",
     "                lista_resumo_balanco = []\n",
@@ -65,10 +65,10 @@
     "    def coletar_dados_financeiros(self, navegador, datas):\n",
     "        dados = {\n",
     "            'datas': datas,\n",
-    "            'fluxo_caixa_operacional': [],\n",
-    "            'fluxo_caixa_investimentos': [],\n",
-    "            'fluxo_caixa_financiamento': [],\n",
-    "            'aumento_reducao_caixa_equivalentes': [],\n",
+    "            'capex_tres_meses': [],\n",
+    "            'fluxo_caixa_livre_tres_meses': [np.nan] * len(datas),\n",
+    "            'capex_doze_meses': [],\n",
+    "            'fluxo_caixa_livre_doze_meses': [np.nan] * len(datas),\n",
     "    \n",
     "        }\n",
     "        for data in datas:\n",
@@ -76,10 +76,9 @@
     "                lista_resumo_balanco = self.obter_dados_tabela(navegador=navegador, data=data)\n",
     "                if lista_resumo_balanco:\n",
     "                    break\n",
-    "            dados['fluxo_caixa_operacional'].append(lista_resumo_balanco[1].replace('R$','').replace(',','.').strip())\n",
-    "            dados['fluxo_caixa_investimentos'].append(lista_resumo_balanco[3].replace('R$','').replace(',','.').strip())\n",
-    "            dados['fluxo_caixa_financiamento'].append(lista_resumo_balanco[7].replace('R$','').replace(',','.').strip())\n",
-    "            dados['aumento_reducao_caixa_equivalentes'].append(lista_resumo_balanco[7].replace('R$','').replace(',','.').strip())\n",
+    "            dados['capex_tres_meses'].append(lista_resumo_balanco[1].replace('R$','').replace(',','.').strip())\n",
+    "            dados['capex_doze_meses'].append(lista_resumo_balanco[3].replace('R$','').replace(',','.').strip())\n",
+    "        \n",
     "            \n",
     "        df_resumo_balanco = pd.DataFrame(dados)\n",
     "        \n",
@@ -88,10 +87,10 @@
     "    def coletar_dados_nao_financeiros(self,navegador, datas):\n",
     "        dados = {\n",
     "            'datas': datas,\n",
-    "            'fluxo_caixa_operacional': [],\n",
-    "            'fluxo_caixa_investimentos': [],\n",
-    "            'fluxo_caixa_financiamento': [],\n",
-    "            'aumento_reducao_caixa_equivalentes': [],\n",
+    "            'capex_tres_meses': [],\n",
+    "            'fluxo_caixa_livre_tres_meses': [],\n",
+    "            'capex_doze_meses': [],\n",
+    "            'fluxo_caixa_livre_doze_meses': [],\n",
     "        }\n",
     "\n",
     "        for data in datas:\n",
@@ -99,10 +98,10 @@
     "                lista_resumo_balanco = self.obter_dados_tabela(navegador=navegador, data=data)\n",
     "                if lista_resumo_balanco:\n",
     "                    break\n",
-    "            dados['fluxo_caixa_operacional'].append(lista_resumo_balanco[1].replace('R$','').replace(',','.').strip())\n",
-    "            dados['fluxo_caixa_investimentos'].append(lista_resumo_balanco[3].replace('R$','').replace(',','.').strip())\n",
-    "            dados['fluxo_caixa_financiamento'].append(lista_resumo_balanco[7].replace('R$','').replace(',','.').strip())\n",
-    "            dados['aumento_reducao_caixa_equivalentes'].append(lista_resumo_balanco[7].replace('R$','').replace(',','.').strip())\n",
+    "            dados['capex_tres_meses'].append(lista_resumo_balanco[1].replace('R$','').replace(',','.').strip())\n",
+    "            dados['fluxo_caixa_livre_tres_meses'].append(lista_resumo_balanco[3].replace('R$','').replace(',','.').strip())\n",
+    "            dados['capex_doze_meses'].append(lista_resumo_balanco[5].replace('R$','').replace(',','.').strip())\n",
+    "            dados['fluxo_caixa_livre_doze_meses'].append(lista_resumo_balanco[7].replace('R$','').replace(',','.').strip())\n",
     "            \n",
     "        df_resumo_balanco = pd.DataFrame(dados)\n",
     "            \n",
@@ -131,7 +130,8 @@
     "\n",
     "                if acao in self.setor_financeiro:\n",
     "                    df_dados = self.coletar_dados_financeiros(navegador=navegador, datas=datas)  \n",
-    "                    for col in df_dados.columns[(df_dados.columns != 'datas')]:\n",
+    "                    colunas = df_dados.columns[(df_dados.columns != 'fluxo_caixa_livre_3_meses') & (df_dados.columns != 'fluxo_caixa_livre_12_meses') & (df_dados.columns != 'datas')]\n",
+    "                    for col in colunas:\n",
     "                        df_dados[col] = df_dados[col].apply(self.converter_valor)\n",
     "                else:\n",
     "                    df_dados = self.coletar_dados_nao_financeiros(navegador=navegador, datas=datas) \n",
