--- a/teste_2.ipynb
+++ b/teste_2.ipynb
@@ -191,16 +191,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo de execução da ação ABEV3: 0.45 minutos\n",
-      "Tempo de execução da ação AZUL4: 0.28 minutos\n",
-      "Tempo de execução da ação B3SA3: 0.53 minutos\n",
-      "Tempo de execução da ação BBAS3: 0.52 minutos\n",
-      "Tempo de execução da ação BBDC3: 0.50 minutos\n",
-      "Tempo de execução da ação BBDC4: 0.51 minutos\n",
-      "Tempo de execução da ação BBSE3: 0.43 minutos\n",
-      "Tempo de execução da ação BEEF3: 0.49 minutos\n",
-      "Tempo de execução da ação BPAC11: 0.49 minutos\n",
-      "Tempo de execução da ação BRAP4: 0.48 minutos\n"
+      "Tempo de execução da ação ABEV3: 0.75 minutos\n",
+      "Tempo de execução da ação AZUL4: 0.42 minutos\n",
+      "Tempo de execução da ação B3SA3: 0.75 minutos\n",
+      "Tempo de execução da ação BBAS3: 0.67 minutos\n",
+      "Tempo de execução da ação BBDC3: 0.68 minutos\n",
+      "Tempo de execução da ação BBDC4: 0.73 minutos\n",
+      "Tempo de execução da ação BBSE3: 0.63 minutos\n",
+      "Tempo de execução da ação BEEF3: 0.91 minutos\n"
      ]
     }
    ],
@@ -221,7 +219,7 @@
     "options.add_argument(\"--disable-gpu\")  # Desativar o uso de GPU\n",
     "options.add_argument(\"--window-size=1920,1080\")  # Definir o tamanho da janela\n",
     "\n",
-    "scraper = FluxoCaixaDataScraper(setor_financeiro, options, service,acoes=codigos_ibovespa)\n",
+    "scraper = CapexDataScraper(setor_financeiro, options, service,acoes=codigos_ibovespa)\n",
     "\n",
     "dados = scraper.rodar_acoes()\n"
    ]
