Adcionando verificacao se houve mudanca

--- a/teste_2.ipynb
+++ b/teste_2.ipynb
@@ -163,7 +163,7 @@
     "\n",
     "    def salvar_dados(self,lista_dataframes):\n",
     "        if self.diretorio is None:\n",
-    "            self.diretorio = 'dados/fluxo_caixa.csv'\n",
+    "            self.diretorio = 'dados/capex.csv'\n",
     "        pd.concat(lista_dataframes).to_csv(self.diretorio)\n",
     "\n",
     "    def converter_valor(self,valor):\n",
@@ -198,7 +198,9 @@
       "Tempo de execução da ação BBDC3: 0.68 minutos\n",
       "Tempo de execução da ação BBDC4: 0.73 minutos\n",
       "Tempo de execução da ação BBSE3: 0.63 minutos\n",
-      "Tempo de execução da ação BEEF3: 0.91 minutos\n"
+      "Tempo de execução da ação BEEF3: 0.91 minutos\n",
+      "Tempo de execução da ação BPAC11: 0.78 minutos\n",
+      "Tempo de execução da ação BRAP4: 0.95 minutos\n"
      ]
     }
    ],
