Adcionando outros scraper

--- a/codigos_rodando/teste_balanco.ipynb
+++ b/codigos_rodando/teste_balanco.ipynb
@@ -2,31 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tempo de execução da ação ABEV3: 0.81 minutos\n",
-      "Ação ABEV3 já processada, pulando.\n",
-      "Tempo de execução da ação AZUL4: 0.53 minutos\n",
-      "Tempo de execução da ação ITUB4: 0.97 minutos\n",
-      "Código de negociação bbbbbb não encontrado.\n"
+      "Tempo de execução da ação ABEV3: 0.02 minutos\n",
+      "Tempo de execução da ação AZUL4: 0.01 minutos\n",
+      "Tempo de execução da ação B3SA3: 0.02 minutos\n",
+      "Tempo de execução da ação BBAS3: 0.02 minutos\n",
+      "Tempo de execução da ação BBDC3: 0.02 minutos\n",
+      "Tempo de execução da ação BBDC4: 0.01 minutos\n",
+      "Tempo de execução da ação BBSE3: 0.02 minutos\n"
      ]
     }
    ],
    "source": [
     "import sys\n",
     "sys.path.append('..')\n",
-    "from FundamentsStockBrazil.CashFlow import FluxoCaixaDataScraper\n",
+    "from FundamentsStockBrazil.SetorSubsetor import SetorDataScraper\n",
     "from selenium.webdriver.chrome.service import Service\n",
     "from selenium.webdriver.chrome.options import Options\n",
     "\n",
-    "codigos_ibovespa = [\n",
-    "    'ABEV3','ABEV3', 'AZUL4', 'ITUB4', 'bbbbbb'\n",
-    "]\n",
+    "with open('codigos_teste.txt', 'r') as f:\n",
+    "    codigos_ibovespa = f.read().splitlines()\n",
     "\n",
     "setor_financeiro = {'BBAS3', 'BBDC3', 'BBDC4', 'BBSE3', 'ITUB4', 'BPAC11', 'ITUB4', 'SANB11', 'IRBR3'}\n",
     "\n",
@@ -42,11 +43,11 @@
     "options.add_argument(\"--disable-gpu\")  # Desativar o uso de GPU\n",
     "options.add_argument(\"--window-size=1920,1080\")  # Definir o tamanho da janela\n",
     "\n",
-    "scraper = FluxoCaixaDataScraper(setor_financeiro, options, service, acoes=codigos_ibovespa, diretorio='../dados/fluxo_caixa.csv')\n",
+    "scraper = SetorDataScraper(setor_financeiro, options, service, acoes=codigos_ibovespa)\n",
     "\n",
     "dados = scraper.rodar_acoes()\n",
     "\n",
-    "dados.to_csv('../dados/fluxo_caixa.csv')"
+    "dados.to_csv('../dados/setor.csv')"
    ]
   },
   {
